# Live-Cyber-Map

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  build-variant.sh  docker-compose.yml
.github/workflows/: ci.yml
backend/: .coverage  Dockerfile  alembic.ini  requirements.txt  ruff.toml  setup.cfg
backend/alembic/: env.py
backend/app/: main.py
backend/tests/: conftest.py  test_alert_routes.py  test_alert_service.py  test_anomaly_detector.py  test_api_smoke.py  test_country_risk.py  test_database.py  test_financial_data.py  test_financial_routes.py  test_generator.py  test_geoip.py  test_integration_ws.py  test_intelligence_routes.py  test_layers_external.py  test_layers_routes.py  test_main_lifespan.py  test_news_aggregator.py  test_ollama_service.py  test_processor.py  test_routes_direct.py  test_routes_extra.py  test_websocket_handler.py  test_websocket_manager.py  test_ws_endpoint.py
docs/screenshots/: README.md
frontend/: Dockerfile  declarations.d.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/components/: AlertRuleManager.tsx  AttackFeed.tsx  CountryDrilldown.tsx  CountryRiskPanel.tsx  Dashboard.tsx  FinancialTicker.tsx  FlatMap.tsx  Globe.tsx  IntelligenceBrief.tsx  LayerPanel.tsx  NotificationTray.tsx  OllamaSettings.tsx  ReplayControls.tsx
frontend/e2e/: smoke.spec.ts
frontend/hooks/: useFinancial.ts  useIntelligence.ts  useIsMobile.ts  useLayers.ts  (+2 more)
nginx/: nginx.conf
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+35 files in other folders)
