[package]
name = "global-intel-dashboard"
version = "2.0.0"
description = "Global Intelligence Dashboard – desktop app"
authors = ["dnlkilonzi-pixel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-open",
  "window-close",
  "window-minimize",
  "window-maximize",
  "window-start-dragging",
  "system-tray",
  "notification-all",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
